# rasusa

./: .dockerignore  .gitattributes  .gitignore  .release-please-config.json  .travis.yml  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  codecov.yml  cog.toml  justfile  out.fasta  out.fq  test_bam.rs  test_bam_2.rs  test_bam_3.rs  test_hash  test_hash.rs  test_out.bam  test_out2.bam  test_out_paired.bam
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: benchmark-pr.yaml  benchmark.yaml  dependency-updates.yaml  docker.yaml  release-please.yaml  release.yaml  rust-ci.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ubam-output-refinement.md
.planning/phases/01-research-and-prototyping/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-refactoring-and-abstraction/: 02-01-SUMMARY.md  PLAN.md  RESEARCH.md
.planning/phases/04-validation-and-testing/: 04-01-SUMMARY.md  PLAN.md
.planning/phases/05-documentation-and-cleanup/: 05-01-SUMMARY.md  PLAN.md
.planning/phases/05.1-fix-ubam-output/: 05.1-01-SUMMARY.md  PLAN.md
.planning/phases/05.2-sbc-refinements/: 02-PLAN.md  02-SUMMARY.md  05.2-CONTEXT.md  05.2-RESEARCH.md  05.2-VALIDATION.md  05.2-VERIFICATION.md  PLAN-SUMMARY.md  PLAN.md
benches/: README.md  baseline.json  bench.sh  gen_fixtures.sh  indice_storage.rs  lib.py  render_readme.py  subsample.rs  update_readme.sh
ci/: after_success.sh  before_deploy.sh  docker_push.sh  install.sh  script.sh
install/: install.sh
paper/: paper.bib  paper.md  tech-template.tex
src/: alignment.rs  cli.rs  fastx.rs  file_type.rs  format.rs  lib.rs  main.rs  reads.rs  source.rs  subsampler.rs  threading.rs
src/alignment/: args.rs  fetch.rs  header.rs  io.rs  mod.rs  model.rs  stream.rs  util.rs
tests/: main.rs  reproducibility.rs  sbc_len_test.rs  test_writer.rs
tests/cases/: baseline_aln_42.txt  file1.fq.fai  h37rv.fa.fai  no_start_end.bam  no_start_end.bam.bai  seed.fastq  test.bam.bai  test.paired.bam.bai
tests/cases/ubam/: paired_interleave_ubam.bam  paired_interleave_ucram.cram  paired_interleave_usam.sam  paired_sorted_ubam.bam  paired_sorted_ucram.cram  paired_sorted_usam.sam  single_ubam.bam  single_ucram.cram  single_usam.sam  test.bam  test.cram  test.fasta  test.fastq
