[package]
name = "rasusa"
description = "Randomly subsample reads or alignments"
version = "2.2.0"
authors = ["Michael Hall <michael@mbh.sh>"]
edition = "2018"
repository = "https://github.com/mbhall88/rasusa"
homepage = "https://github.com/mbhall88/rasusa"
readme = "README.md"
keywords = ["bioinformatics", "subsampling", "fastq", "alignment", "coverage"]
categories = ["science", "command-line-utilities"]
license-file = "LICENSE"
exclude = ["tests/cases/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.2"
thiserror = "2.0"
anyhow = "1.0"
needletail = { version = "0.5.1", features = ["compression"] }
rand = "0.9.2"
rand_pcg = "0.3.1"
log = "0.4"
niffler = "2.5"
env_logger = "0.11.8"
rust-htslib = { version = "0.50.0", default-features = false, features = ["bzip2", "lzma"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.21.0"

[profile.release]
strip = true   # https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#strip-symbols-from-binary

[profile.profiling]
inherits = "release"
debug = true
strip = false
