[package]
name = "rasusa"
description = "Randomly subsample reads or alignments"
version = "2.2.2"
authors = ["Michael Hall <michael@mbh.sh>"]
edition = "2018"
repository = "https://github.com/mbhall88/rasusa"
homepage = "https://github.com/mbhall88/rasusa"
readme = "README.md"
keywords = ["bioinformatics", "subsampling", "fastq", "alignment", "coverage"]
categories = ["science", "command-line-utilities"]
license-file = "LICENSE"
exclude = ["tests/cases/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[package.metadata.cargo-shear]
ignored = ["noodles-bgzf"] # it is used by noodles to handle decompression, but not used in the code

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
regex = "1.12.3"
thiserror = "2.0"
anyhow = "1.0"
needletail = { version = "0.5.1", features = ["compression"] }
rand = "0.10.0"
rand_pcg = "0.10.1"
log = "0.4"
niffler = "2.5"
env_logger = "0.11.8"
noodles-util = { version = "0.73.0", features = ["alignment"] }
noodles = { version = "0.104.0", features = ["bam", "core", "sam"] }
noodles-bgzf = { version = "0.45.0", features = ["libdeflate"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.24.0"

[profile.release]
strip = true   # https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#strip-symbols-from-binary
debug = false
lto = true # https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.profiling]
inherits = "release"
debug = true
strip = false
