[package]
name = "rasusa"
description = "Randomly subsample reads or alignments"
version = "5.0.0"
authors = ["Michael Hall <michael@mbh.sh>"]
edition = "2018"
repository = "https://github.com/mbhall88/rasusa"
homepage = "https://github.com/mbhall88/rasusa"
readme = "README.md"
keywords = ["bioinformatics", "subsampling", "fastq", "alignment", "coverage"]
categories = ["science", "command-line-utilities"]
license-file = "LICENSE"
exclude = ["tests/cases/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
regex = "1.12.3"
thiserror = "2.0"
anyhow = "1.0"
needletail = { version = "0.5.1", features = ["compression"] }
rand = "0.10.1"
rand_pcg = "0.10.1"
log = "0.4"
niffler = "2.5"
env_logger = "0.11.9"
noodles-util = { version = "0.81.0", features = ["alignment"] }
noodles = { version = "0.112.0", features = ["bam", "cram", "core", "sam"] }
noodles-bgzf = { version = "0.48.0", features = ["libdeflate"] }
rustc-hash = "2.1"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
criterion = "0.8"

[[bench]]
name = "subsample"
harness = false

[profile.release]
strip = true   # https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#strip-symbols-from-binary
debug = false
lto = true # https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.profiling]
inherits = "release"
debug = true
strip = false
